Bug 222719 - Maximized plots always return to their original size
Summary: Maximized plots always return to their original size
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.0
Platform: unspecified Microsoft Windows
: NOR normal
Target Milestone: 2.0.0
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-14 16:11 UTC by Nicolas Brisset
Modified: 2010-11-12 10:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Brisset 2010-01-14 16:11:11 UTC
Version:           2.0.0_devel (using unspecified)
Compiler:          mingw delivered with QtCreator 1.1.0
OS:                Windows 32-Bit

Steps to reproduce:

- launch kst and create 2 plots from gyrodata.dat
- maximize the 1st plot
- resize kst's main window
- unmaximize the plot: it returns to the original size, which is no longer valid
Comment 1 Netterfield 2010-04-29 05:14:23 UTC
SVN commit 1120411 by netterfield:

i) Shrink the width of the last page of the data wizard so that the dialog
doesn't resize between pages.

ii) properly resize the plot when returning from 'z' mode after the window has
been resized.

BUG: 222719



 M  +46 -46    datawizardpageplot.ui  
 M  +11 -0     plotitem.cpp  
 M  +1 -0      plotitem.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1120411
Comment 2 Peter Kümmel 2010-08-14 12:14:42 UTC
Change version from 2.0.0_devel to 2.0.0 to simplify version numbering.
Comment 3 Peter Kümmel 2010-11-12 10:42:27 UTC
These bugs are solved with 2.0.0