i) Shrink the width of the last page of the data wizard so that the dialog doesn't resize between pages.

ii) properly resize the plot when returning from 'z' mode after the window has
been resized.

BUG: 222719



git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1120411 283d02a7-25f6-0310-bc7c-ecb5cbfe19da